--- a/index.html
+++ b/index.html
@@ -6,24 +6,32 @@
     <title>Elite BR — Comunidade</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
+
     <header>
+        <img src="logo.png" alt="Logo Elite BR" class="logo">
+
         <h1>Elite BR</h1>
-        <p>A maior e mais ativa comunidade brasileira de Elite Dangerous.</p>
-        <a href="https://discord.gg/elitebr" class="cta">Entrar no Discord</a>
+        <p class="slogan">Comunidade Brasileira sobre Elite Dangerous</p>
+
+        <a href="https://discord.gg/elitebr" class="cta">
+            <img src="discord.png" class="discord-icon" alt="">
+            Entrar no Discord
+        </a>
     </header>
 
-    <section class="links">
-        <h2>Links importantes</h2>
-        <ul>
-            <li><a href="https://discord.gg/elitebr" target="_blank">Discord Oficial</a></li>
-            <li><a href="#">Projetos da Comunidade (em breve)</a></li>
-            <li><a href="#">Podcast ELITE BR (em breve)</a></li>
-        </ul>
+    <section class="coming-soon">
+        <h2>Mais novidades em breve</h2>
     </section>
 
     <footer>
-        © Elite BR — Comunidade Brasileira de Elite Dangerous
+        <p>
+            Website não oficial e sem fins comerciais da comunidade brasileira de Elite Dangerous.<br>
+            Elite Dangerous is a registered trademark of Frontier Developments. 
+            This is an unofficial, non-commercial fan community website.
+        </p>
     </footer>
+
 </body>
 </html>
