--- a/index.html
+++ b/index.html
@@ -3,35 +3,32 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elite BR — Comunidade</title>
+    <title>Elite BR — Comunidade Brasileira de Elite Dangerous</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
+    <div class="container">
 
-    <header>
-        <img src="logo.png" alt="Logo Elite BR" class="logo">
+        <!-- LOGO -->
+        <img src="logo.png" alt="Elite BR Logo" class="logo" />
 
+        <!-- TÍTULO -->
         <h1>Elite BR</h1>
+
+        <!-- SLOGAN -->
         <p class="slogan">Comunidade Brasileira sobre Elite Dangerous</p>
 
-        <a href="https://discord.gg/elitebr" class="cta">
-            <img src="discord.png" class="discord-icon" alt="">
+        <!-- BOTÃO DISCORD -->
+        <a class="discord-btn" href="https://discord.gg/elitebr" target="_blank">
+            <img src="discord.png" alt="Discord" class="discord-icon" />
             Entrar no Discord
         </a>
-    </header>
 
-    <section class="coming-soon">
-        <h2>Mais novidades em breve</h2>
-    </section>
+        <!-- MENSAGEM -->
+        <p class="soon">Mais novidades em breve...</p>
 
-    <footer>
-        <p>
-            Website não oficial e sem fins comerciais da comunidade brasileira de Elite Dangerous.<br>
-            Elite Dangerous is a registered trademark of Frontier Developments. 
-            This is an unofficial, non-commercial fan community website.
-        </p>
-    </footer>
-
-</body>
-</html>
+        <!-- RODAPÉ -->
+        <footer>
+            <p>
+                Unofficial & non-commercial Elite Dangerous community website.  
