--- a/index.html
+++ b/index.html
@@ -26,12 +26,21 @@
     </section>
 
     <footer>
-        <p>
-            Website não oficial e sem fins comerciais da comunidade brasileira de Elite Dangerous.<br>
-            Elite Dangerous is a registered trademark of Frontier Developments. 
-            This is an unofficial, non-commercial fan community website.
-        </p>
-    </footer>
+    <p>
+        Website não oficial e sem fins comerciais da comunidade brasileira de 
+        <a href="https://www.elitedangerous.com" target="_blank" rel="noopener noreferrer">
+            Elite Dangerous
+        </a>.
+        <br>
+
+        Elite Dangerous is a registered trademark of 
+        <a href="https://www.frontier.co.uk" target="_blank" rel="noopener noreferrer">
+            Frontier Developments
+        </a>.
+        This is an unofficial, non-commercial fan community website.
+    </p>
+</footer>
+
 
 </body>
 </html>
