--- a/index.html
+++ b/index.html
@@ -28,18 +28,25 @@
     <footer>
     <p>
         Website não oficial e sem fins comerciais da comunidade brasileira de 
-        <a href="https://www.elitedangerous.com" target="_blank" rel="noopener noreferrer">
-            Elite Dangerous
-        </a>.
+        <a href="https://www.elitedangerous.com" target="_blank" rel="noopener noreferrer">Elite Dangerous</a>.
         <br>
-
-        Elite Dangerous is a registered trademark of 
-        <a href="https://www.frontier.co.uk" target="_blank" rel="noopener noreferrer">
-            Frontier Developments
-        </a>.
+        <a href="https://www.elitedangerous.com" target="_blank" rel="noopener noreferrer">Elite Dangerous</a> is a registered trademark of 
+        <a href="https://www.frontier.co.uk" target="_blank" rel="noopener noreferrer">Frontier Developments</a>.
         This is an unofficial, non-commercial fan community website.
     </p>
 </footer>
+
+<style>
+    footer a {
+        color: #ff7a00;       /* cor laranja Elite BR */
+        text-decoration: none; /* remove sublinhado */
+        font-weight: bold;    /* opcional, deixa mais visível */
+    }
+
+    footer a:hover {
+        color: #ffffff;       /* muda a cor ao passar o mouse */
+    }
+</style>
 
 
 </body>
