--- a/biblioteca.html
+++ b/biblioteca.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Biblioteca Elite BR</title>
+    <link rel="stylesheet" href="stynavbar.css">
 </head>
 <body>
 
