--- a/ferramentas-uteis.html
+++ b/ferramentas-uteis.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ferramentas Úteis - Elite BR</title>
+    <link rel="stylesheet" href="stynavbar.css">
 </head>
 <body>
 
