--- a/quem-somos.html
+++ b/quem-somos.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Quem Somos - Elite BR</title>
+    <link rel="stylesheet" href="stynavbar.css">
 </head>
 <body>
 
