--- a/salao-da-elite.html
+++ b/salao-da-elite.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Salão da Elite - Elite BR</title>
+    <link rel="stylesheet" href="stynavbar.css">
 </head>
 <body>
 
