--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-
+    <nav class="navbar">
+        <ul>
+            <li><a href="quem-somos.html">Quem Somos</a></li>
+            <li><a href="salao-da-elite.html">Salão da Elite</a></li>
+            <li><a href="ferramentas-uteis.html">Ferramentas Úteis</a></li>
+            <li><a href="biblioteca.html">Biblioteca Elite BR</a></li>
+        </ul>
+    </nav>
     <header>
         <img src="logo.png" alt="Logo Elite BR" class="logo">
 
