--- a/index.html
+++ b/index.html
@@ -9,14 +9,42 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <ul>
-            <li><a href="quem-somos.html">Quem Somos</a></li>
-            <li><a href="salao-da-elite.html">Salão da Elite</a></li>
-            <li><a href="ferramentas-uteis.html">Ferramentas Úteis</a></li>
-            <li><a href="biblioteca.html">Biblioteca Elite BR</a></li>
-        </ul>
-    </nav>
+    <<head>
+    <meta charset="UTF-8">
+    <title>Sua Página - Elite BR</title>
+    <style>
+        .navbar {
+            background: #ff7a00; /* barra laranja */
+            padding: 15px;
+            border-bottom: 2px solid #0d0d0d; /* opcional, contraste */
+            font-family: Arial, sans-serif;
+        }
+
+        .navbar ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            gap: 25px;
+        }
+
+        .navbar a {
+            color: #000000; /* links pretos */
+            text-decoration: none;
+            font-size: 1.1rem;
+            font-weight: bold;
+            transition: 0.2s;
+        }
+
+        .navbar a:hover {
+            color: #ffffff; /* hover branco */
+        }
+    </style>
+</head>
+<body>
+
+    <na
+
     <header>
         <img src="logo.png" alt="Logo Elite BR" class="logo">
 
