--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
         <title>Elite BR — Comunidade</title>
     <link rel="stylesheet" href="stynavbar.css">
     <link rel="stylesheet" href="styles.css" />
-</head>
-
-<body>
-    <<head>
-    <meta charset="UTF-8">
-    <title>Sua Página - Elite BR</title>
     <style>
         .navbar {
             background: #ff7a00; /* barra laranja */
@@ -41,10 +35,16 @@
         }
     </style>
 </head>
+ 
 <body>
-
-    <na
-
+    <nav class="navbar">
+        <ul>
+            <li><a href="quem-somos.html">Quem Somos</a></li>
+            <li><a href="salao-da-elite.html">Salão da Elite</a></li>
+            <li><a href="ferramentas-uteis.html">Ferramentas Úteis</a></li>
+            <li><a href="biblioteca.html">Biblioteca Elite BR</a></li>
+        </ul>
+     </nav>
     <header>
         <img src="logo.png" alt="Logo Elite BR" class="logo">
 
