--- a/biblioteca.html
+++ b/biblioteca.html
@@ -42,120 +42,4 @@
         /* Header */
         .site-header {
             display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px;
-            background: #0d0d0d;
-            color: #ffffff;
-            flex-wrap: wrap;
-        }
-
-        .header-left {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-        }
-
-        .logo {
-            height: 60px;
-        }
-
-        .site-info h1 {
-            margin: 0;
-            font-size: 1.8rem;
-            color: #ff7a00;
-        }
-
-        .site-info .slogan {
-            margin: 0;
-            font-size: 1rem;
-            color: #ffffff;
-        }
-
-        .header-right .cta {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            background: #ff7a00;
-            color: #000000;
-            text-decoration: none;
-            font-weight: bold;
-            padding: 10px 15px;
-            border-radius: 5px;
-            transition: 0.2s;
-        }
-
-        .header-right .cta:hover {
-            color: #ffffff;
-            background: #ff9500;
-        }
-
-        .discord-icon {
-            height: 20px;
-        }
-
-        /* Ocultar "Mais novidades em breve" */
-        .coming-soon {
-            display: none;
-        }
-
-        /* Footer */
-        footer a {
-            color: #ff7a00;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        footer a:hover {
-            color: #ffffff;
-        }
-    </style>
-</head>
-<body>
-
-    <!-- Navbar -->
-    <nav class="navbar">
-        <ul>
-            <li><a href="quem-somos.html">Quem Somos</a></li>
-            <li><a href="salao-da-elite.html">Salão da Elite</a></li>
-            <li><a href="ferramentas-uteis.html">Ferramentas Úteis</a></li>
-            <li><a href="biblioteca.html">Biblioteca Elite BR</a></li>
-        </ul>
-    </nav>
-
-    <!-- Header -->
-    <header class="site-header">
-        <div class="header-left">
-            <img src="logo.png" alt="Logo Elite BR" class="logo">
-            <div class="site-info">
-                <h1>Elite BR</h1>
-                <p class="slogan">Comunidade Brasileira sobre Elite Dangerous</p>
-            </div>
-        </div>
-        <div class="header-right">
-            <a href="https://discord.gg/elitebr" class="cta">
-                <img src="discord.png" class="discord-icon" alt="Discord">
-                Entrar no Discord
-            </a>
-        </div>
-    </header>
-
-    <!-- Conteúdo da página -->
-    <main>
-        <!-- Seu conteúdo centralizado vai aqui -->
-    </main>
-
-    <!-- Footer -->
-    <footer>
-        <p>
-            Website não oficial e sem fins comerciais da comunidade brasileira de 
-            <a href="https://www.elitedangerous.com" target="_blank" rel="noopener noreferrer">Elite Dangerous</a>.
-            <br>
-            <a href="https://www.elitedangerous.com" target="_blank" rel="noopener noreferrer">Elite Dangerous</a> is a registered trademark of 
-            <a href="https://www.frontier.co.uk" target="_blank" rel="noopener noreferrer">Frontier Developments</a>.
-            This is an unofficial, non-commercial fan community website.
-        </p>
-    </footer>
-
-</body>
-</html>
+            justify-content: sp
